added grid layout for projects in css, add profile pic in index.html, made the webpage responsive with flex.

--- a/index.html
+++ b/index.html
@@ -1,68 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="GA Tech Bootcamp Homework">
-       
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Bhavna Jain</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="GA Tech Bootcamp Homework">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Bhavna Jain</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-  <header> 
-      <h1> Bhavna Jain</h1>
-      <nav>
-          <ul>
-              <li> <a href="#about-me">About Me</a></li>
-              <li> <a href="#my-projects">My Projects</a></li>   
-              <li> <a href="#contact-me">Contact Me</a></li>
-              <li> <a href="#resume">Resume</a></li>
-          </ul>
-      </nav>
+  <header>
+    <h1> Bhavna Jain</h1>
+    <nav>
+      <ul>
+        <li> <a href="#about-me">About Me</a></li>
+        <li> <a href="#my-projects">My Projects</a></li>
+        <li> <a href="#contact-me">Contact Me</a></li>
+        <li> <a href="#resume">Resume</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <Section class="flexbox flex-container" id="about-me">
       <div class="flexbox flex-left">
+        <article>
           <h2>About Me</h2>
+        </article>
+        <img class="profile-pic" src="./assets/images/IMG_1914.jpg" alt="Bhavna Jain" />
+
       </div>
       <div class="flexbox flex-right">
-          <Article><p> My name is Bhavna Jain. I am currently a Georgia Tech Coding Bootcamp student. I am learning to become a full stack developer.
-              I love to read, solve multidimensional cubes, cooking, and listening to music.</p></Article>
+        <article>
+          <p> My name is Bhavna Jain. I am currently a Georgia Tech Coding Bootcamp student and hoping to start my career as a
+            full stack developer.I like to put my logical and creative skills in combination with 
+            the passion of coding.There is always new to learn in the software industry which is why I chose this field.
+            I love to read, solve multidimensional cubes,cook,and listening to the music.</p>
+        </Article>
       </div>
-  </Section>
+    </Section>
 
-  <Section class="flexbox flex-container" id="my-projects" >
-    <div class="flexbox flex-left">
+    <Section class="flexbox flex-container" id="my-projects">
+      <div class="flexbox flex-left">
         <h2>My Projects</h2>
-    </div>
-    <div class="image-grid flexbox flex-right">
-      <img class="image-grid-col-2 image-grid-row-2" src="assets/images/matrix-g29e6033e8_1280.jpg" alt="Matrix"/>
-      <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/keyboard-g5a70ca9dc_1280.jpg" alt="Cog Wheels" />
-      <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/cinema-4d-g4ae28f28f_1280.jpg" alt="Cog Wheels" />
-      <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/cog-wheels-gf9029663e_640.jpg" alt="Cog Wheels" />
-      <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/apple-gcc3d418e1_1280.jpg" alt="Cog Wheels" />
-    </div>
+      </div>
+      <div class="flex-container image-grid flexbox flex-right">
 
-</section>
+        <img class="image-grid-col-2 image-grid-row-2" src="assets/images/matrix-g29e6033e8_1280.jpg" alt="Matrix" />
+        <h5 class="box-caption align-center"> <a
+            href="https://gt.bootcampcontent.com/GT-Coding-Boot-Camp/GT-VIRT-FSF-PT-02-2022-U-LOL">
+            Delta</a></h5>
 
-<section class="flexbox flex-container" id="contact-me">
-  <div class="flexbox flex-left"> 
-      <h2>Contact Me</h2>
-  </div>
-  <div class="flexbox flex-right">
-   <nav>
-      <ul>
-          <li> <a href="#Phone">404.789.7022</a></li>
-          <li> <a href="#Email">bhavnaostwal@gmail.com</a></li>   
-          <li> <a href="#Github">Github</a></li>
-          <li> <a href="#Linkedin">Linkedin</a></li>
-          
-      </ul>
-   </nav>
- </div>
-</section>
+      </div>
+    </section>
+
+    <Section class="flexbox flex-container" id="resume" >
+      <div class="flexbox flex-left">
+        <h2>Resume</h2>
+      </div>
+
+      <div class="flex-container flexbox flex-right">
+
+        <div class="box-grid">
+
+          <div class="box-flex box-flex-center">
+            <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/technology-gf856bb6cb_1280.jpg"
+              alt="Cog Wheels" />
+            <h5 class="box-caption align-center">
+              <a href="https://gt.bootcampcontent.com/GT-Coding-Boot-Camp/GT-VIRT-FSF-PT-02-2022-U-LOL">
+                Alpha </a></h5>
+
+          </div>
+          <div class="box-flex box-flex-center">
+            <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/cinema-4d-g4ae28f28f_1280.jpg"
+              alt="Cog Wheels" />
+            <h5 class="box-caption align-center"> <a
+                href="https://gt.bootcampcontent.com/GT-Coding-Boot-Camp/GT-VIRT-FSF-PT-02-2022-U-LOL">
+                Beta </a></h5>
+
+          </div>
+          <div class="box-flex box-flex-center">
+            <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/salad-gf197b1e02_1280.jpg"
+              alt="Cog Wheels" />
+            <h5 class="box-caption align-End"> <a
+                href="https://gt.bootcampcontent.com/GT-Coding-Boot-Camp/GT-VIRT-FSF-PT-02-2022-U-LOL">
+                Gamma</a></h5>
+
+          </div>
+          <div class="box-flex box-flex-center">
+
+            <img class="image-grid-col-2-2 image-grid-row-2" src="assets/images/apple-gcc3d418e1_1280.jpg"
+              alt="Cog Wheels" />
+            <h5 class="box-caption align-center"> <a
+                href="https://gt.bootcampcontent.com/GT-Coding-Boot-Camp/GT-VIRT-FSF-PT-02-2022-U-LOL">
+                Delta </a></h5>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="flexbox flex-container" id="contact-me">
+      <div class="flexbox flex-left">
+        <h2>Contact Me</h2>
+      </div>
+      <div class="flexbox flex-right">
+        <nav>
+          <ul>
+            <li> <a href="#Phone">404.789.7022</a></li>
+            <li> <a href="#Email">bhavnaostwal@gmail.com</a></li>
+            <li> <a href="#Github">Github</a></li>
+            <li> <a href="#Linkedin">Linkedin</a></li>
+          </ul>
+        </nav>
+      </div>
+    </section>
 
 
 
@@ -78,6 +132,7 @@
 </body>
 <footer class="page-footer">
   <p>Copyright &#169; 2022 <a href="/">Bhavna Jain</a></p>
-  
+
 </footer>
+
 </html>
